fixed some broken css

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -162,23 +162,23 @@ font header .navbar-default .navbar-nav li a:hover {
 /*--
 	service Start
 --*/
-#service {
+#services {
   text-align: center;
   padding: 90px 0;
 }
-#service .service-item {
+#services .service-item {
   padding-bottom: 30px;
 }
-#service .service-item i {
+#services .service-item i {
   font-size: 60px;
   color: #4A4656;
 }
-#service .service-item h4 {
+#services .service-item h4 {
   padding-top: 20px;
   margin: 0;
   color: #666;
 }
-#service .service-item p {
+#services .service-item p {
   color: #888;
   padding-top: 10px;
   margin: 0;
